--- a/style.css
+++ b/style.css
@@ -35,17 +35,20 @@ nav ul li {
   margin: auto;
 }
 
-#main-images {
+#main-images, #main-images-test{
   width: 960px;
   margin: auto;
+  margin-bottom: 30px;
 }
 
-#main-images img {
+#main-images img, #main-images-test img {
+  width: 300px;
+  height: 300px;
   display: inline-block;
 }
 
 footer {
-  
+  margin-top: 500px;
   width: 100%;
   height: 100px;
   background-color: lightgray;
